--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.12"
 matplotlib    = "^3.9.0"
 opencv-python = "^4.10.0.84"
 pyboy         = "^2.1.0"
+seaborn       = "^0.13.2"
+statsmodels   = "^0.14.2"
 torch         = "^2.3.0"
 
 [build-system]
